# AI_tutor

./: .gitignore  readme.md
FEv2/: design.md  eslint.config.js  index.html  models.md  package-lock.json  package.json
FEv2/src/: App.jsx  index.css  main.jsx
FEv2/src/components/layout/: AppLayout.jsx  Header.jsx  NotebookSpread.jsx  NotebookTree.jsx  PageShell.jsx  Sidebar.jsx  SidebarNav.jsx  UserProfile.jsx
FEv2/src/components/marginalia/: MarginNote.jsx  MarginRail.jsx  useMarginalia.js
FEv2/src/components/ui/: button.jsx  card.jsx  divider.jsx  input.jsx  progress-thread.jsx  stamp.jsx
FEv2/src/design/: motion.js  textures.jsx  tokens.js
FEv2/src/features/dashboard/: DashboardPage.jsx
FEv2/src/hooks/: useApi.js
FEv2/src/lib/: api.js  earnedDetails.js  mockData.js  useTheme.js  utils.js
backend/: .env.example  api.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 15e08ee01504_initial.py  a1b2c3d4e5f6_add_content_file_path.py
backend/app/: config.py  main.py  models.py  router.py  services.py
backend/app/api/v1/: chat.py  documents.py  notebooks.py
backend/app/models/: __init__.py  document.py  message.py  notebook.py
backend/app/schemas/: __init__.py  chat.py  document.py  notebook.py
backend/app/services/: chat.py  ingestion.py  storage.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/design/: motion.js  motion.ts  tokens.js
frontend/src/hooks/: useApp.js
frontend/src/lib/: data.js  store.jsx
frontend/src/pages/: HomePage.jsx  LandingPage.jsx
(+26 files in other folders)
