[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
]
